tests/snapshots/parser_error_fixtures/modules_many_errors__BrokenFn.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/modules_many_errors/BrokenFn.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/modules_many_errors/BrokenFn.flx:3:9
  |
2 |     pub fn greet(name: String) -> String
  |         - `greet` starts here
3 |         "Hello, " + name
  |         ^^^^^^^^^
  |         --------- This looks like the function body

Note:
  while parsing module `BrokenFn` > function `greet`

Help:
  Try adding `{` after the function signature.


error[E034]: Missing Function Body

This function body needs to start with `{`.

  examples/parser_errors/modules_many_errors/BrokenFn.flx:6:9
  |
5 |     pub fn parting(name: String) -> String
  |         - `parting` starts here
6 |         "Goodbye, " + name
  |         ^^^^^^^^^^^
  |         ----------- This looks like the function body

Note:
  while parsing module `BrokenFn` > function `parting`

Help:
  Try adding `{` after the function signature.

Found 2 errors.
== stdout ==
<not executed>
